[package]
name = "codex-session"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "6"
owo-colors = "4"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4", "v7"] }
walkdir = "2.5"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
crossterm = "0.28"
printpdf = "0.7"

codex-protocol = { path = "../codex/codex-rs/protocol" }
